# Flow.Launcher.Plugin.VolumeControl

./: .gitignore  README.md  build.bat  build.sh  install_plugin.bat  main.py  plugin.json  requirements.txt
rust_source/: Cargo.toml
rust_source/src/: main.rs
