[package]
name = "vol_control"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
windows-volume-control = "0.1"

[profile.release]
opt-level = "z"  # Optimize for size
lto = true       # Link-Time Optimization
codegen-units = 1
panic = "abort"  # Abort on panic for smaller binary
strip = true     # Strip symbols
